--- a/style.css
+++ b/style.css
@@ -1,14 +1,21 @@
-body {
-    background-color: #f0f0f0;
-    font-family: Arial, sans-serif;
+.container {
+    background-color: rgb(60,60,51);
+    padding: 10px;
+    font-size: 1.5rem;
+    flex-wrap:wrap;
 }
-
-h1 {
-    color: rgb(255, 0, 0);
-    text-align: center;
+.box1{
+    background-color: red;
 }
-
-p {
-    color: #ff00aa;
-    font-size: 16px;
+.box2{
+    background-color: green;
+}
+.box3 {
+    background-color: blue;
+}
+@media only screen and (max-width:700px){
+    .box1{
+        background: aliceblue;
+        font: size 2rem;
+    }
 }
